<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#80FFFFFF">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:weightSum="2">

        <ImageView
            android:contentDescription="@string/dog"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_dogprofile"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_row"
                android:layout_width="300dp"
                android:layout_height="34dp"
                android:singleLine="true"
                android:text="@string/name_row"
                android:textAlignment="viewStart"
                android:textSize="15sp"
                android:textStyle="bold"
                android:paddingStart="10dp"
                />

            <TextView
                android:id="@+id/weight_row"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="13dp"
                android:text="@string/weight_row"
                android:textSize="12sp"
                android:textStyle="bold"
                android:visibility="visible" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>